test/Fail/Issue6042.agda
{-# OPTIONS --type-in-type --rewriting --without-K #-}

open import Agda.Builtin.Equality
open import Agda.Builtin.Equality.Rewrite

postulate
  _ï¼_ : {A : Set} â†’ A â†’ A â†’ Set
  refl' : {A : Set} (a : A) â†’ (a ï¼ a)
  Î£ : (A : Set) (B : A â†’ Set) â†’ Set
  _,_ : {A : Set} {B : A â†’ Set} (a : A) â†’ B a â†’ Î£ A B
  fst : {A : Set} {B : A â†’ Set} â†’ Î£ A B â†’ A
  snd : {A : Set} {B : A â†’ Set} (u : Î£ A B) â†’ B (fst u)
  Î  : (A : Set) (B : A â†’ Set) â†’ Set
  ğ›Œ : {A : Set} {B : A â†’ Set} (f : (x : A) â†’ B x) â†’ Î  A B
  _âˆ™_ : {A : Set} {B : A â†’ Set} (f : Î  A B) (a : A) â†’ B a
  Î Î² : {A : Set} {B : A â†’ Set} (f : (x : A) â†’ B x) (a : A) â†’ (ğ›Œ f âˆ™ a) â‰¡ f a
  fstÎ² : {A : Set} {B : A â†’ Set} (a : A) (b : B a) â†’ fst {A} {B} (a , b) â‰¡ a

{-# REWRITE Î Î² fstÎ² #-}

postulate
  sndÎ² : {A : Set} {B : A â†’ Set} (a : A) (b : B a) â†’ snd {A} {B} (a , b) â‰¡ b

{-# REWRITE sndÎ² #-}

Id : {A : Set} (B : Î  A (Î» _ â†’ Set)) {aâ‚€ aâ‚ : A} (aâ‚‚ : aâ‚€ ï¼ aâ‚) (bâ‚€ : B âˆ™ aâ‚€) (bâ‚ : B âˆ™ aâ‚) â†’ Set

postulate
  Id-const : (A B : Set) {aâ‚€ aâ‚ : A} (aâ‚‚ : aâ‚€ ï¼ aâ‚) (bâ‚€ bâ‚ : B) â†’
    Id {A} (ğ›Œ Î» _ â†’ B) aâ‚‚ bâ‚€ bâ‚ â‰¡ (bâ‚€ ï¼ bâ‚)
  ï¼-Î  : {A : Set} {B : A â†’ Set} (f g : Î  A B) â†’
    (f ï¼ g) â‰¡ Î  (Î£ A (Î» aâ‚€ â†’ Î£ A (Î» aâ‚ â†’ aâ‚€ ï¼ aâ‚))) (Î» aâ‚“ â†’
      Id (ğ›Œ B) (snd (snd aâ‚“)) (f âˆ™ fst aâ‚“) (g âˆ™ fst (snd aâ‚“)))

{-# REWRITE Id-const ï¼-Î  #-}

postulate
  âˆš : {I : Set} (A : (iâ‚€ iâ‚ : I) (iâ‚‚ : iâ‚€ ï¼ iâ‚) â†’ Set) â†’ I â†’ Set
  dig : {I : Set} (A : (iâ‚€ iâ‚ : I) (iâ‚‚ : iâ‚€ ï¼ iâ‚) â†’ Set) {iâ‚€ iâ‚ : I} (iâ‚‚ : iâ‚€ ï¼ iâ‚)
    (sâ‚€ : âˆš A iâ‚€) (sâ‚ : âˆš A iâ‚) (sâ‚‚ : Id (ğ›Œ (âˆš A)) iâ‚‚ sâ‚€ sâ‚) â†’ A iâ‚€ iâ‚ iâ‚‚
  corr : (X : Set) â†’ âˆš (Î» Xâ‚€ Xâ‚ Xâ‚‚ â†’ Î  Xâ‚ (Î» _ â†’ Set)) X

_â†“ : {Xâ‚€ Xâ‚ : Set} (Xâ‚‚ : Xâ‚€ ï¼ Xâ‚) â†’ Î  Xâ‚ (Î» _ â†’ Set)
_â†“ {Xâ‚€} {Xâ‚} Xâ‚‚ = dig (Î» Xâ‚€ Xâ‚ Xâ‚‚ â†’ Î  Xâ‚ (Î» _ â†’ Set)) Xâ‚‚ (corr Xâ‚€) (corr Xâ‚) (refl' (ğ›Œ corr) âˆ™ (Xâ‚€ , (Xâ‚ , Xâ‚‚)))

Id {A} B {aâ‚€} {aâ‚} aâ‚‚ bâ‚€ bâ‚ = ((refl' B âˆ™ (aâ‚€ , (aâ‚ , aâ‚‚))) â†“) âˆ™ bâ‚
