test/Fail/Issue6042.err
Issue6042.agda:35.13-21: warning: -W[no]RewriteBeforeMutualFunctionDefinition
Rewrite rule from function  Id-const  cannot be added before the definition of mutually defined Id
when checking the pragma REWRITE Id-const ï¼-Î 

Issue6042.agda:35.22-25: warning: -W[no]RewriteBeforeMutualFunctionDefinition
Rewrite rule from function  ï¼-Î   cannot be added before the definition of mutually defined Id
when checking the pragma REWRITE Id-const ï¼-Î 

Issue6042.agda:44.79-93: error: [UnequalTerms]
(ğ›Œ corr ï¼ ğ›Œ corr) !=< Î  _A_132 _B_133
when checking that the expression refl' (ğ›Œ corr) has type
Î  _A_132 _B_133
